# tree-sitter-refal5

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  log.html  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-refal5.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_refal5/: binding.c
bindings/rust/: build.rs  lib.rs
refal/: LibraryEx.c  R5FW-Parser-Defs.c  R5FW-Parser.c  R5FW-Plainer.c  arithemtic.c  main  main.c  main.ref
refal/corpus/: arithemtic.ref
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: arithmetic.txt  comments.txt  compound.txt  extern.txt  function.txt  program.txt
