[package]
name = "tree-sitter-refal5"
description = "Refal5 grammar for tree-sitter"
version = "0.1.2"
authors = ["Mikhail Butvin <butvin.mihail@yandex.ru>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "refal5"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/butvinm/tree-sitter-refal5"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
